objects/pse__fflib_SchedulerConfiguration__c.object
<CustomObject>
    <description>The underlying object used to configure the Scheduler with information such as a job&apos;s start and end dates or on which days to run a job.</description>
    <fields>
        <fullName>pse__EndAfterX__c</fullName>
        <label>Number of Occurrences to End After</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__HourlyRecurrenceInterval__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Hours Between Each Occurrence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__MonthlyFixedDate__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Monthly Fixed Date</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__MonthlyRecurMode__c</fullName>
        <label>Recurs Every Month on a</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Date</fullName>
                    <default>true</default>
                    <label>Fixed Date</label>
                </value>
                <value>
                    <fullName>Relative Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__MonthlyRecurRelativeDateFlavor__c</fullName>
        <label>Flavor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__MonthlyRecurRelativeDateOrdinal__c</fullName>
        <label>Ordinal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First</fullName>
                    <default>true</default>
                    <label>First</label>
                </value>
                <value>
                    <fullName>Second</fullName>
                </value>
                <value>
                    <fullName>Third</fullName>
                </value>
                <value>
                    <fullName>Fourth</fullName>
                </value>
                <value>
                    <fullName>Last</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__NearestWeekday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run on nearest weekday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__PreferredStartTimeHour__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Preferred Start Time Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__PreferredStartTimeMinute__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Preferred Start Time Minute</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__SchedulingFrequency__c</fullName>
        <label>Scheduling Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                    <default>true</default>
                    <label>Hourly</label>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__VisibleFields__c</fullName>
        <description>Controls visibility of sets of fields on the schedule component.</description>
        <label>Visible Fields</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Start Date</fullName>
                </value>
                <value>
                    <fullName>End Date</fullName>
                </value>
                <value>
                    <fullName>End After X</fullName>
                </value>
                <value>
                    <fullName>Preferred Start Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__WeeklyRecurOnDays__c</fullName>
        <description>Which weekdays to recur on, if recurring on a weekly basis.</description>
        <label>Recur Every Week on</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PSA Scheduler Configuration</label>
    <nameField>
        <displayFormat>SC-{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>fflib_SchedulerConfiguration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSA Scheduler Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>